# task-tracker

./: .gitignore  CMakeLists.txt  README.md
assets/: pkg.rc
src/: main.cpp
